@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2012-08-20 03:57 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * contrib/what32/source/_wintree.c
+    ! reverted my change per 2012-06-20 06:52 UTC+0700 (with minor changes)
+    which caused this particular file not compilable under BCC63.
+
 2012-08-19 18:52 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/rdd/dbf1.c
     ! bug fix in Foxpro DBFCDX after appending record with memo field (reported
